istiofiles-examples/customer-vs-gw.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-vs
spec:
  hosts:
  - "*"
  gateways:
  - customer-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: customer
