istiofiles-examples/customer-vs-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer
spec:
  hosts:
  - customer
  http:
#  - match:
#    - uri:
#        prefix: /api/v1/
#  - fault:
#      abort:
#        percent: 10
#        httpStatus: 400
#  - fault:
#      delay:
#        percent: 100
#        fixedDelay: 5s
    route:
    - destination:
        host: customer
        subset: va
      weight: 100
    - destination:
        host: customer
        subset: vb
      weight: 0
