istiofiles-examples/customer-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer
spec:
  hosts:
  - customer
  http:
#  - match:
#    - uri:
#        prefix: /api/v1/
#  - match:
#    - headers:
#        user:
#          exact: rcuchoa
#  - fault:
#      abort:
#        percent: 10
#        httpStatus: 400
#  - fault:
#      delay:
#        percent: 100
#        fixedDelay: 5s
  - route:
    - destination:
        host: customer
        subset: va
      weight: 100
    - destination:
        host: customer
        subset: vb
      weight: 0
    timeout: 10s
    retries:
      attempts: 3
      perTryTimeout: 2s
