istiofiles-examples/preference-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: preference
spec:
  hosts:
  - preference
  http:
#  - fault:
#      abort:
#        percent: 10
#        httpStatus: 400
#  - fault:
#      delay:
#        percent: 100
#        fixedDelay: 5s
  - route:
    - destination:
        host: preference
        subset: v1
      weight: 100
    timeout: 10s
    retries:
      attempts: 3
      perTryTimeout: 2s
